<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.Home">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:id="@+id/linear_home_top"
        android:paddingRight="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="1dp"/>
        <ImageButton
            android:contentDescription="@string/information_icon"
            android:backgroundTint="@android:color/transparent"
            android:id="@+id/img_notice_selectCountryPage"
            android:src="@drawable/ic_more_vert"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/linear_home_top"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/swipe_home"
        android:layout_weight="1"
        android:layout_height="0px">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_home"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <LinearLayout
                android:gravity="center"
                android:visibility="gone"
                android:orientation="vertical"
                android:id="@+id/linear_home_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:text="Oops.."
                    android:textSize="30sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@string/please_check_your_connection"
                    android:textSize="15sp"
                    android:layout_width="match_parent"
                    android:layout_margin="16dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <com.ldoublem.loadingviewlib.view.LVNews
        android:id="@+id/loading_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="100dp"
        android:layout_height="100dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>