<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:layout_margin="16dp"
    app:cardElevation="8dp"
    android:backgroundTint="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:id="@+id/txt_home_countryToday"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/chart_homeFragment"
                android:layout_margin="16dp"
                android:layout_width="200dp"
                android:layout_height="200dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <TextView
                        android:id="@+id/txt_home_unrecoveryCount"
                        android:text="392"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/active"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/yellow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <TextView
                        android:id="@+id/txt_home_recoveredCount"
                        android:text="20"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/recovered"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/green"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="0dp">
                    <TextView
                        android:id="@+id/txt_home_deathCount"
                        android:text="38"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:text="@string/deaths"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:src="@drawable/ic_error_outline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_marginStart="8dp"
                android:textColor="@color/white"
                android:gravity="center|left"
                android:layout_weight="1"
                android:text="@string/see_detail"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <ImageView
                android:src="@drawable/ic_navigate_next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>